monitoring/kubernetes-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    caddy.ingress.kubernetes.io/backend-protocol: "https"
    caddy.ingress.kubernetes.io/insecure-skip-verify: "true"
spec:
  ingressClassName: caddy
  rules:
  - host: k8s-dashboard.easybulk.intra
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
  tls:
  - hosts:
    - k8s-dashboard.easybulk.intra
    secretName: mycerts-caddy
